# lazykh

./: .dockerignore  .env  .gitignore  .gitmodules  Docker-Compose.yml  Dockerfile  README.md  example.env  note  pyproject.toml  requirements.txt
app/: main.py
app/controller/: drawFramesController.py  phonemesController.py  schedulerController.py  textToVideoController.py  text_to_videoController.py  videoFinisher.py
app/models/: emotion_model.py  pos.py  tts.py  ttsOpenSource.py  tts_open_source.py
app/services/: gentelPhonemes.py  gentlePhonemes.py  lazykhHumanImager.py  lazykhScheduler.py  lazykhVideoDrawer.py  lazykhVideoFinisher.py  lazykhschduler.py  subtitle.py  utilities.py  utils.py
exampleVideo/: ev.json  ev_schedule.csv
sprint_video/: ev.json  ev.txt  ev_g.txt  ev_schedule.csv
text_to_video/: config.py
text_to_video/app/: main.py
text_to_video/app/controller/: phonemesController.py  schedulerController.py  video_controller.py
text_to_video/app/services/: lazykhschduler.py  phonemes.py
text_to_video/app/services/temporary/: response.json  scheduleTable.csv  transcript.txt
text_to_video/app/tests/: test_main.py
text_to_video/lazykh/: gentleScriptWriter.py  humanImager.py  lazykh.py  musicAdder.py  scheduler.py  tts.py  utils.py  videoDrawer.py  videoFinisher.py
