[tool.poetry]
name = "lazykh"
version = "0.1.0"
description = "Fork of the lazykh repository"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pillow = "^9.4.0"
gentle = {git = "https://github.com/Green-AI-Innovations/gentle.git"}
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
starlette = "^0.26.1"
requests = "^2.28.2"
pydub = "^0.25.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
