[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Your Name", email = "example@your-email.com" }]
name = "text_to_video"
version = "0.1.0"
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "IDK" }

[tool.setuptools]
packages = ["app"]
